[gd_scene load_steps=15 format=1]

[ext_resource path="res://src/nd_feedback.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/cocogoose_trial.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/particular/blue_button13.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/particular/blue_button04.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]

font/size = 40
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]

font/size = 60
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 30
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

font/size = 15
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]

font/size = 15
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]

font/size = 15
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]

font/size = 30
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]

font/size = 50
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]

font/size = 50
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="Animation" id=10]

resource/name = "view_modal"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.1, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="nd_feedback" type="Node2D"]

visibility/visible = false
visibility/opacity = 0.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_title1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 30.0
margin/right = 720.0
margin/bottom = 118.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "felicitaciones por terminar"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_title2" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 122.0
margin/right = 722.0
margin/bottom = 210.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "qa testing"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_question_1" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 300.0
margin/right = 720.0
margin/bottom = 400.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "en su opini√≥n el curso fue:"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="chb_bueno" type="CheckBox" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 74.0
margin/top = 389.0
margin/right = 155.0
margin/bottom = 420.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.882353, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Bueno"
flat = false
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="chb_regular" type="CheckBox" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 273.0
margin/top = 389.0
margin/right = 370.0
margin/bottom = 420.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.882353, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Regular"
flat = false
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="chb_malo" type="CheckBox" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 511.0
margin/top = 389.0
margin/right = 579.0
margin/bottom = 420.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.113725, 0.654902, 0.882353, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Malo"
flat = false
align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="txe_coment" type="TextEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 479.0
margin/right = 688.0
margin/bottom = 820.0
custom_fonts/font = SubResource( 7 )
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65
__meta__ = {
"_edit_lock_": true
}

[node name="txb_sent" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 393.0
margin/top = 1062.0
margin/right = 678.0
margin/bottom = 1175.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 2.3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_sent" type="Label" parent="txb_sent"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 285.0
margin/bottom = 113.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "enviar"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="txb_back" type="TextureButton" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 1063.0
margin/right = 310.0
margin/bottom = 1176.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
params/resize_mode = 0
params/scale = Vector2( 1.5, 2.3 )
params/stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="lbl_back" type="Label" parent="txb_back"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 285.0
margin/bottom = 113.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.109804, 0.654902, 0.882353, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "volver"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="anp_feedback" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/view_modal = SubResource( 10 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


